--- a/index.html
+++ b/index.html
@@ -956,12 +956,15 @@
 
                             <div class="viewer" id="viewer">
                                 <div class="viewer-content" id="viewerContent">
-                                    <span class="viewer-content-line">Welcome to LyricFlow – stage‑ready lyric scroller.</span>
-                                    <span class="viewer-content-line">Tap Edit to paste or type lyrics.</span>
-                                    <span class="viewer-content-line">Come back to Stage, set a scroll speed, press Start.</span>
-                                    <span class="viewer-content-line">Drag lines during the song to fine‑tune your pace.</span>
-                                    <span class="viewer-content-line">Use Settings to adjust scroll speed, font size, and line spacing.</span>
+                                    <span class="viewer-content-line">
+                                        Welcome to LyricFlow – stage‑ready lyric scroller.
+                                        Tap Edit to paste or type lyrics.
+                                        Come back to Stage, set a scroll speed, press Start.
+                                        Drag lines during the song to fine‑tune your pace.
+                                        Use Settings to adjust scroll speed, font size, and line spacing.
+                                    </span>
                                 </div>
+
                             </div>
                         </div>
                     </div>
