--- a/index.html
+++ b/index.html
@@ -390,8 +390,8 @@
             align-items: center;
             justify-content: center;
             padding: 0 10px;
-            -webkit-mask-image: linear-gradient( to bottom, transparent, black 8%, black 92%, transparent 100% );
-            mask-image: linear-gradient( to bottom, transparent, black 8%, black 92%, transparent 100% );
+            -webkit-mask-image: linear-gradient( to bottom, transparent, black 12%, black 88%, transparent 100% );
+            mask-image: linear-gradient( to bottom, transparent, black 12%, black 88%, transparent 100% );
         }
 
         .viewer {
@@ -606,8 +606,17 @@
         .transport-buttons {
             display: flex;
             align-items: center;
-            gap: 6px;
+            justify-content: space-between; /* spread buttons */
+            gap: 10px;
+            width: 100%;
         }
+
+            .transport-buttons .btn {
+                flex: 1;
+                justify-content: center;
+            }
+
+
 
         .btn {
             border: none;
@@ -953,9 +962,6 @@
                         <span id="playlistPillText">Set 1</span>
                         <span id="playlistPillIndex">1/1</span>
                     </span>
-                    <button class="icon-btn stage-only" id="settingsBtn" title="Settings">
-                        <span>⚙︎</span>
-                    </button>
                     <button class="pill-btn stage-only" id="stageInfoBtn">Info</button>
                 </div>
             </div>
@@ -1352,6 +1358,9 @@
 
         //Let
 
+        let currentOffsetY = 0;
+
+
         let isStageMode = true;
         let scrollAnimationId = null;
         let isScrolling = false;
@@ -1452,17 +1461,29 @@
         }
 
         function snapFirstLineIntoGlow(force = false) {
+            console.log(
+                "SNAP DEBUG entry",
+                "force", force,
+                "isStageMode", isStageMode,
+                "isDragging", isDragging,
+                "isScrolling", isScrolling,
+                "baseContentY", baseContentY,
+                "currentTransform", viewerContent.style.transform,
+                "viewerFontSize", viewerFontSize,
+                "viewerLineHeight", viewerLineHeight
+            );
+
             if (isDragging) {
-                console.log("SNAP DEBUG: skipped – dragging");
+                console.log("SNAP DEBUG skipped: dragging");
                 return;
             }
 
-            const currentTransform = viewerContent.style.transform;
+            const currentTransform = viewerContent.style.transform || "";
             if (!force) {
                 if (currentTransform && currentTransform !== "translateY(0px)") {
                     console.log(
-                        "SNAP DEBUG: skipped – transform not reset",
-                        "currentTransform =", currentTransform
+                        "SNAP DEBUG skipped: transform not reset",
+                        "currentTransform:", currentTransform
                     );
                     return;
                 }
@@ -1470,15 +1491,24 @@
 
             const lines = document.querySelectorAll(".viewer-content-line");
             const glowBand = document.querySelector(".viewer-highlight");
+
             console.log(
-                "SNAP DEBUG: entry",
-                { lineCount: lines.length, hasGlow: !!glowBand }
+                "SNAP DEBUG elements",
+                "lineCount", lines.length,
+                "hasGlow", !!glowBand
             );
 
             if (!lines.length || !glowBand) {
-                console.log("SNAP DEBUG: abort – no lines or glow band");
+                console.log(
+                    "SNAP DEBUG abort: no lines or glow band",
+                    "lines.length", lines.length,
+                    "glowBand", glowBand
+                );
                 return;
             }
+
+            const viewerRect = viewer.getBoundingClientRect();
+            const glowRect = glowBand.getBoundingClientRect();
 
             let firstLine = lines[0];
             for (let i = 0; i < lines.length; i++) {
@@ -1487,74 +1517,51 @@
                     break;
                 }
             }
-
-            const glowRect = glowBand.getBoundingClientRect();
             const lineRect = firstLine.getBoundingClientRect();
-            const glowCenter = glowRect.top + glowRect.height / 2;
-            const lineCenter = lineRect.top + lineRect.height / 2;
 
-            console.log("SNAP DEBUG: geometry", {
-                glowRect: {
-                    top: glowRect.top,
-                    bottom: glowRect.bottom,
-                    height: glowRect.height,
-                    left: glowRect.left,
-                    right: glowRect.right,
-                    width: glowRect.width
-                },
-                lineRect: {
-                    top: lineRect.top,
-                    bottom: lineRect.bottom,
-                    height: lineRect.height,
-                    left: lineRect.left,
-                    right: lineRect.right,
-                    width: lineRect.width
-                },
-                glowCenter,
-                lineCenter
-            });
+            const glowCenter = glowRect.top + glowRect.height / 2 - viewerRect.top;
+            const lineCenter = lineRect.top + lineRect.height / 2 - viewerRect.top;
+
+            console.log(
+                "SNAP DEBUG geometry",
+                { viewerRect, glowRect, lineRect, glowCenter, lineCenter }
+            );
 
             if (
-                !Number.isFinite(glowCenter) ||
-                !Number.isFinite(lineCenter) ||
-                glowRect.height === 0 ||
-                lineRect.height === 0
+                !Number.isFinite(glowCenter) || !Number.isFinite(lineCenter) ||
+                glowRect.height === 0 || lineRect.height === 0
             ) {
                 console.log(
-                    "SNAP DEBUG: abort – invalid geometry",
+                    "SNAP DEBUG retry next frame: invalid geometry",
                     { glowRect, lineRect, glowCenter, lineCenter }
                 );
+                requestAnimationFrame(() => snapFirstLineIntoGlow(force));
                 return;
             }
 
             const delta = glowCenter - lineCenter;
+
             console.log(
-                "SNAP DEBUG: applying",
-                {
-                    baseBefore: baseContentY,
-                    delta,
-                    glowCenter,
-                    lineCenter,
-                    fontSize: viewerFontSize,
-                    lineHeight: viewerLineHeight
-                }
+                "SNAP DEBUG applying",
+                "baseBefore", baseContentY,
+                "delta", delta,
+                "newBase", baseContentY + delta
             );
 
             baseContentY += delta;
             applyScroll();
-
             canonicalBaseContentY = baseContentY;
             elapsedTime = 0;
             updateResetEnabled();
 
             console.log(
-                "SNAP DEBUG: result",
-                {
-                    baseAfter: baseContentY,
-                    transform: viewerContent.style.transform
-                }
+                "SNAP DEBUG result",
+                "baseAfter", baseContentY,
+                "transform", viewerContent.style.transform
             );
         }
+
+
 
 
 
@@ -1702,42 +1709,46 @@
             handleDragEnd();
         });
 
-        function goToInitialStageState() {
-            // Always ensure we are in Stage mode for this
-            isStageMode = true;
-            viewerCard.classList.remove("hidden");
-            editorCard.classList.add("hidden");
-            bottomBar.classList.remove("hidden");
-            modeToggle.querySelector("span").innerHTML =
-                "<strong>Stage mode</strong> <small>tap for edit</small>";
-            settingsBtnBottom.classList.remove("hidden");
+        function goToInitialStageState(caller = "unknown") {
+            console.log(
+                "LyricFlow RESET begin",
+                "caller", caller,
+                "isStageMode", isStageMode,
+                "isScrolling", isScrolling,
+                "baseContentY", baseContentY,
+                "transform", viewerContent.style.transform
+            );
 
-            // stop any scrolling
-            isScrolling = false;
-            if (scrollAnimationId) {
-                cancelAnimationFrame(scrollAnimationId);
-                scrollAnimationId = null;
-            }
-            lastFrameTime = null;
-            startTime = null;
+            pauseScroll();
             elapsedTime = 0;
-            updateTimeDisplay();
+            updateTimeDisplay(0);
 
-            // reset position to canonical snapped start, not hardcoded 0
-            baseContentY = canonicalBaseContentY;
+            baseContentY = 0;
+            canonicalBaseContentY = 0;
             applyScroll();
 
-            console.log("POSITION DEBUG: reset stage", {
-                baseContentY,
-                canonicalBaseContentY,
-                transform: viewerContent.style.transform
-            });
+            isDragging = false;
+            dragStartY = null;
+            dragStartBaseY = 0;
 
-            // UI state
-            setStatus("Ready");
-            startBtn.disabled = false;
-            pauseBtn.disabled = true;
+            console.log(
+                "LyricFlow RESET after zero",
+                "baseContentY", baseContentY,
+                "transform", viewerContent.style.transform
+            );
+
+            // One frame later, with stage fully laid out, do the exact same snap
+            requestAnimationFrame(() => {
+                console.log("LyricFlow RESET calling snapFirstLineIntoGlow");
+                snapFirstLineIntoGlow(true);
+            });
         }
+
+
+
+
+
+
 
 
 
@@ -1830,6 +1841,13 @@
             viewerContent.style.opacity = 1;
             viewerContent.style.transition = "transform 0.08s ease-out";
 
+            console.log(
+                "DRAG DEBUG end",
+                "baseContentY", baseContentY,
+                "transform", viewerContent.style.transform,
+                "wasScrollingBeforeDrag", wasScrollingBeforeDrag
+            );
+
             const shouldResume = wasScrollingBeforeDrag && isStageMode;
             wasScrollingBeforeDrag = false;
 
@@ -1838,9 +1856,10 @@
             } else {
                 const effective = Math.max(0, getPixelsPerSecond());
                 setStatus(effective === 0 ? "Ready (speed 0)" : "Ready");
+                updateResetEnabled();
             }
-            updateResetEnabled();
         }
+
 
         function rebuildViewerFromEditor() {
             const text = editor.value;
@@ -1920,8 +1939,30 @@
 
         resetBtn.addEventListener("click", () => {
             if (!isStageMode) return;
-            goToInitialStageState();
+
+            // 1) Rebuild viewer from the editor text,
+            //    like a fresh load of the current lyrics
+            rebuildViewerFromEditor();
+
+            // 2) Hard reset scroll state
+            pauseScroll();
+            elapsedTime = 0;
+            updateTimeDisplay(0);
+            baseContentY = 0;
+            canonicalBaseContentY = 0;
+            isDragging = false;
+            dragStartY = null;
+            dragStartBaseY = 0;
+            applyScroll();
+
+            // 3) One frame later, snap the first non‑blank line into the glow window
+            requestAnimationFrame(() => {
+                snapFirstLineIntoGlow(true);
+            });
         });
+
+
+
 
 
         /* Keyboard */
@@ -1984,10 +2025,6 @@
             settingsOverlay.classList.remove("hidden");
         }
 
-        settingsBtn.addEventListener("click", () => {
-            if (!isStageMode) return;
-            openSettings();
-        });
 
         settingsBtnBottom.addEventListener("click", () => {
             if (!isStageMode) return;
@@ -2308,6 +2345,8 @@
 
 
         function loadSongIntoUI(song) {
+            console.log("LyricFlow LOAD: start", { song });
+
             currentSongId = song.id;
             currentPlaylistName = song.playlist || "Set 1";
 
@@ -2339,8 +2378,28 @@
             buildCurrentPlaylistOrder(currentPlaylistName, currentSongId);
             updateStagePlaylistUI();
 
-            setStatus("Loaded " + song.name);
+            goToInitialStageState("loadSongIntoUI");
+
+            requestAnimationFrame(() => {
+                const highlight = document.querySelector(".viewer-highlight");
+                const firstLine = viewerContent.querySelector(".viewer-content-line");
+                const viewerRect = viewer.getBoundingClientRect();
+                const highlightRect = highlight ? highlight.getBoundingClientRect() : null;
+                const lineRect = firstLine ? firstLine.getBoundingClientRect() : null;
+
+                console.log(
+                    "LyricFlow LOAD after goToInitialStageState",
+                    "baseContentY", baseContentY,
+                    "transform", viewerContent.style.transform,
+                    { viewerRect, highlightRect, lineRect }
+                );
+            });
+
+            setStatus(`Loaded ${song.name}`);
+
         }
+
+
 
         function buildCurrentPlaylistOrder(playlistName, focusSongId) {
             const songs = savedSongs
@@ -2623,10 +2682,11 @@
             handleDragStart(e.clientY);
         });
 
-        window.addEventListener("mousemove", (e) => {
-            if (!isDragging) return;
-            handleDragMove(e.clientY);
+        window.addEventListener("load", () => {
+            applyFontSize();
+            goToInitialStageState("window.load");
         });
+
 
         window.addEventListener("mouseup", () => {
             handleDragEnd();
